deployment/Infras/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: techsparkapp
  name: techsparkapp-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: techsparkapp
  template:
    metadata:
      labels:
        app: techsparkapp
    spec:
      containers:
      - image: rinaahm/techsparkapp:v7
        name: techsparkapp
