deployment/Infras/techsparkapp.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: techsparkapp
  name: techsparkapp
spec:
  containers:
  - image: rinaahm/techsparkapp:v7
    name: techsparkapp
