deployment/Infras/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: appservice
  name: appservice
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: appdeploy
