deployment/Infras/ingress-bookinfo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookinfo-ingress
  namespace: istio-bookinfo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "4000"
spec:
  rules:
  - host: product.compaore.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: productpage
            port:
              number: 9080
