deployment/Infras/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "4000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "4000"
    nginx.org/websocket-services: "appservice"
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
  rules:
  - host: test.compaore.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rollouts-demo-stable
            port: 
              number: 80
  - host: app.compaore.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: appservice
            port:
              number: 80
